# Enola

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Correccion_Categoria.md  Decisions.md  Manual_Enola_Investigadora_Digital.docx  README.md  SPEC.md  SPEC_SCRAPER_MEJORA.md  config.yaml  facebook_html_sample.txt  finalfix.md  fix.md  fix_categorias.md  nixpacks.toml  pyproject.toml  requirements.prod.txt  requirements.txt  test_preprocessor.py  test_scraper_preprocessing.py
.nicegui/: storage-user-0a15d1ff-3fab-40fb-9a20-247e37373193.json  storage-user-0ee317e1-da96-4339-8131-e015ceb2f96e.json  storage-user-15378f2e-a1e8-4885-9732-2b4b31a90b7e.json  storage-user-192881e2-686b-42fe-9a38-30032d6ccffc.json  storage-user-1c0ea60b-d662-49eb-aa19-0512735dd103.json  storage-user-1caf7661-f2ba-44d0-be64-7a3b0100d985.json  storage-user-1f0de110-2956-4920-b305-4c4b2db0f81c.json  storage-user-209981a9-1354-4d97-99df-4a9ce40810d3.json  storage-user-2191bcf2-462f-446b-802d-51cf9db81cc6.json  storage-user-25734f91-7b3d-4c1c-ae1d-90b185aacdc5.json  storage-user-41356721-b46d-43b1-b73f-f56e005b8a7c.json  storage-user-46a824ac-3e15-4cb3-b3a0-8f1b1dba5bb9.json  storage-user-4b408d61-ff8e-4ad6-9da3-32d3d3c555e1.json  storage-user-4bce2a28-05ca-4e23-aa42-9281bf6fa5be.json  storage-user-4d1939d4-87ef-4cc0-8fbb-48eb7a262d23.json  storage-user-5a742d82-9ebb-4fbc-8fb4-c197377732fe.json  storage-user-5be74cb1-c4d6-4970-a236-1b909fc67094.json  storage-user-5fd23bc8-1e19-4efe-b7f9-1a2dd2891b0c.json  storage-user-60c8eaec-c343-423b-a94d-151ff0c37a2f.json  storage-user-659a48bf-e66e-4615-820b-a2dc47fde877.json  storage-user-7deb9fe6-eceb-4e2c-846f-7a8ef3bffaa0.json  storage-user-7f01bb4d-2fa0-49e1-b172-df3cdebf52b9.json  storage-user-7fe4b054-4322-439a-9ad0-e846bd536351.json  storage-user-85d0566b-a47b-48fc-885a-e9cdc530c6c2.json  storage-user-8d821e31-c514-4869-9054-1bd78d2eb83f.json  storage-user-9dbab4c5-21ff-43b6-91f7-557e67f8be31.json  storage-user-9f367a46-5624-4e1b-9343-d79f6a5e39b1.json  storage-user-af285691-6da4-4d56-a5fe-9a55059b3430.json  storage-user-bfb8d2bd-c301-4889-a63a-426dfa5a9982.json  storage-user-c786262b-8b3e-44d5-bba4-37eadef9a366.json  storage-user-d60f4cb7-92d7-4990-b75d-4c2e14a17835.json  storage-user-d9139278-29f9-40ec-9e03-6aac7846625e.json  storage-user-dba02a32-f7ba-4c04-8bc6-69aa5d7d2fff.json  (+1 more)
(+276 files in other folders)
